improve latex table and add same concept for most correct

--- a/001_learn_worldmap_hard_countries/plots/top_10_wrong_guesses_table.tex
+++ b/001_learn_worldmap_hard_countries/plots/top_10_wrong_guesses_table.tex
@@ -4,7 +4,7 @@
 \label{tab:wrong-guesses}
 \begin{tabular}{lrrr}
 \toprule
-Country & M (\%) & N & Wrong \\
+Country & \% of guesses wrong & N & Wrong \\
 \midrule
 Wallis and Futuna Is. & 66.8 & 397 & 265 \\
 Tonga & 62.6 & 449 & 281 \\
